updates to make game compile on windows

--- a/dmake.conf
+++ b/dmake.conf
@@ -1,1 +1,5 @@
-pkg-config: sdl2 SDL2_image tinyxml
+# unix
+#pkg-config: sdl2 SDL2_image tinyxml
+
+# windows
+ccflags: -IC:\mingw64\devlib\SDL2\include -LC:\mingw64\devlib\SDL2\lib -IC:\mingw64\devlib\SDL2_image\include -LC:\mingw64\devlib\SDL2_image\lib -IC:\mingw64\devlib\tinyxml\include -LC:\mingw64\devlib\tinyxml\lib -lmingw32 -lSDL2main -lSDL2 -lSDL2_image -ltinyxml
